Refine powertrain runtime and idle control